--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,8 @@ background-image: linear-gradient(180deg, #52ACFF 25%, #FFE32C 100%);
 html{
     scroll-behavior: smooth;
 }
+@media all and (min-width:768px) and (max-width:991px) {
+    body{
+        width: 100%;
+    }
+}
